--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -5,5 +5,6 @@
   "attachmentFolderPath": "addedit",
   "newFileLocation": "root",
   "promptDelete": false,
-  "tabSize": 2
+  "tabSize": 2,
+  "readableLineLength": false
 }
